[project]
name = "bluesky-python"
version = "0.0.1"
authors = [
  { name="StupidJane", email="stupidjane@tutanota.com" },
]
description = "A small .env parser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/astupidjane/bluesky-python"
Issues = "https://github.com/astupidjane/bluesky-python/issues"

[build-system]
requires = ["pyenvs"]
